--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         </div>
       </div>
       <div class="row" >
-        <div class="col-md-12"><a href="https://google.com">
+        <div class="col-md-12"><a href="https://rebrand.ly/pedro-github">
             <h3 class="text-center text-white py-3" style=""><b>Vou te ensinar a <span class="w-25"><b>lucrar com o aviãozinho</b></span></b><br></h3><img class="img-fluid d-block mx-auto" src="fALE-COMIGO-NO-WHATSAPP-1.png">
-          </a></div><a href="https://google.com">
+          </a></div><a href="https://rebrand.ly/pedro-github">
         </a>
-      </div><a href="https://google.com">
+      </div><a href="https://rebrand.ly/pedro-github">
       </a>
-    </div><a href="https://google.com">
+    </div><a href="https://rebrand.ly/pedro-github">
     </a>
   </div>
   <div class="bg-dark py-1">
@@ -65,13 +65,13 @@
                 </div>
               </div>
             </div> <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev" style=""> <span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carousel" role="button" data-slide="next"> <span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span> </a><a class="carousel-control-next" href="#carousel" role="button" data-slide="next" style=""> <span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span> </a>
-            <div class="col-md-12"><a href="https://google.com">
+            <div class="col-md-12"><a href="https://rebrand.ly/pedro-github">
                 <img class="img-fluid d-block mx-auto" src="fALE-COMIGO-NO-WHATSAPP-1.png"></a></div>
           </div>
         </div>
       </div>
     </div>
-  </div><a href="https://google.com">
+  </div><a href="https://rebrand.ly/pedro-github">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
