--- a/index.html
+++ b/index.html
@@ -110,8 +110,9 @@
       <div class="row">
         <div class="col-md-12"><a href="https://rebrand.ly/pedro-github">
             <h3 class="text-center text-white py-0" style="">
-              <h3 class="text-center text-white py-3"><b>Aprenda a ganhar de <b class="bg-dark text-warning">50 a 200 reais por dia</b>&nbsp;<span class="w-25"><b class="">com o aviãozinho</b></span></b><br></h3>
-            </h3><img class="img-fluid d-block mx-auto atrasado" src="fALE-COMIGO-NO-WHATSAPP-1.png">
+            </h3>
+            <h3 class="text-center text-white py-3"><b>Aprenda a ganhar de <b class="bg-dark text-warning">50 a 200 reais por dia</b>&nbsp;<span class="w-25"><b class="">com o aviãozinho</b></span></b><br></h3>
+            <img class="img-fluid d-block mx-auto atrasado" src="fALE-COMIGO-NO-WHATSAPP-1.png">
           </a></div><a href="https://rebrand.ly/pedro-github">
         </a>
       </div><a href="https://rebrand.ly/pedro-github">
@@ -160,7 +161,11 @@
               </div>
             </div> <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev" style=""> <span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carousel" role="button" data-slide="next"> <span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span> </a><a class="carousel-control-next" href="#carousel" role="button" data-slide="next" style=""> <span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span> </a>
             <div class="col-md-12"><a href="https://rebrand.ly/pedro-github">
-                <img class="img-fluid d-block mx-auto atrasado" src="fALE-COMIGO-NO-WHATSAPP-1.png"></a></div>
+                <img class="img-fluid d-block mx-auto atrasado" src="fALE-COMIGO-NO-WHATSAPP-1.png">
+                <h3 class="text-center">O jogo do aviãozinho funciona da seguinte forma, o avião vai começar a subir e quanto mais subir mais você ganha, porém você precisa pular do avião antes do avião explodir. Pulando antes você lucre muito. Só que é muito difícil adivinhar quando o avião vai explodir, por isso criamos um robô que consegue prevê e dizer com precisão quando vai explodir.</h3>
+              </a>
+              <p class="text-monospace">Este site não é afiliado ao KWAI ou a qualquer entidade do KWAI. Depois que você sair do KWAI, a responsabilidade não é deles e sim do nosso site. Fazemos todos os esforços para indicar claramente e mostrar todas as provas do produto e usamos resultados reais. Nós não vendemos o seu e-mail ou qualquer informação para terceiros. Jamais fazemos nenhum tipo de spam. Se você tiver alguma dúvida, sinta-se à vontade para usar o link de contato e falar conosco em horário comercial de Segunda a Sextas das 09h00 ás 18h00. Lemos e respondemos todas as mensagens por ordem de chegada.</p>
+            </div>
           </div>
         </div>
       </div>
